fixed rambots css to align text to left instead of center
👍👍👍👍👍👍👍👍👍👍👍👍👍

--- a/rambots.css
+++ b/rambots.css
@@ -24,7 +24,7 @@ body {
 .main{
     padding: 30px;
     font-size: 20px;
-    text-align: center;
+    text-align: left;
     min-height: 100vh;
     width: 100%;
 
